[project]
name = "produtosfp"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafel-Melo",email = "rafael.vilas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "decouple (>=0.0.7,<0.0.8)",
    "pandas (>=3.0.1,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "produtosfp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
